junit: keep junit 5.5.2+ on the classpath for module-info in production only case
no need to --add-reads on test (modularized) dependencies for production module then

GitOrigin-RevId: 65aecc0d21004e9da2dc8ecfd82858e4bbabd4ae